--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@types/react-dom": "^18.0.6",
     "canvas-confetti": "^1.5.1",
     "framer-motion": "^7.2.0",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.5.2",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
