--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://kovalev-congratulations.vercel.app/api/congratulations
+REACT_APP_API_URL=https://kovalev-congratulations.vercel.app/api
