--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.49",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@use-gesture/react": "^10.2.18",
     "canvas-confetti": "^1.5.1",
     "framer-motion": "^7.2.0",
     "prettier": "^2.7.1",
