--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.0",
+    "react-player": "^2.10.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.5.2",
     "react-transition-group": "^4.4.5",
