--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^7.2.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.0",
     "react-scripts": "5.0.1",
