--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@use-gesture/react": "^10.2.18",
     "canvas-confetti": "^1.5.1",
     "framer-motion": "^7.2.0",
+    "nuka-carousel": "^5.2.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.2",
