--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.0",
+    "react-markdown": "^8.0.3",
     "react-scripts": "5.0.1",
     "react-spring": "^9.5.2",
     "react-transition-group": "^4.4.5",
